Fix long text overflow in code elements

--- a/_assets/css/_main.scss
+++ b/_assets/css/_main.scss
@@ -240,6 +240,7 @@ table {
 
 code {
   border-radius: $global-radius;
+  overflow-wrap: break-word;
 }
 
 a code {
